# mlops_project_Perla_Rim

./: Dockerfile  README.md  alert_rules.yml  alertmanager.yml  docker-compose.yml  mlflow.db  prometheus.yml  pyproject.toml  tasks.py
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
config/: config.yml  config_dev.yaml  config_prod.yaml
data/: sample_data.csv
docs/: index.html  mlops_project_perla_rim.html  search.js
docs/mlops_project_perla_rim/: config.html  data_loader.html  data_transformer.html  main.html  model.html
mlruns/1/2023a92ba49a4f69b89fe8bf6b7eae2c/artifacts/model/: MLmodel  conda.yaml
mlruns/1/28668043aa5d4b4e8063d9f1f4f5a180/artifacts/model/: MLmodel  python_env.yaml
mlruns/1/ee168893cbe84cfa890796ce48451119/artifacts/model/: MLmodel  model.pkl
src/mlops_project_perla_rim/: __main__.py  config.py  data_loader.py  main.py  train.py
src/mlops_project_perla_rim/data_loader/: csv_loader.py
src/mlops_project_perla_rim/endpoints/: __init__.py  health.py  pipeline.py
src/mlops_project_perla_rim/model/: factory.py  linear_model.py
tests/: test_data_loader.py  test_model.py  test_transformer.py
