[tool.poetry]
name = "mlops-project-perla-rim"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mlops_project_perla_rim", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.1.3"
scikit-learn = "^1.5.2"
omegaconf = "^2.3.0"
pydantic = "^2.10.3"
loguru = "^0.7.2"
mlflow = "^2.18.0"
pytest = "^8.3.4"

[tool.poetry.scripts]
mlops_project_perla_rim= "mlops_project_perla_rim.main:main"

[tool.poetry.group.dev.dependencies]
pdoc = "^15.0.0"
ruff = "^0.8.1"
mypy = "^1.13.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
